force-app/main/default/objects/Campaign_Funnel_Snapshot__c/Campaign_Funnel_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Point-in-time daily snapshot of campaign member counts by status, populated by the OA Daily Funnel Snapshot reporting snapshot. Enables funnel trend-over-time reporting that Salesforce does not otherwise retain. Analytics-only; no email, no automation.</description>
    <label>Campaign Funnel Snapshot</label>
    <nameField>
        <displayFormat>SNAP-{0000000}</displayFormat>
        <label>Snapshot ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Funnel Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>