force-app/main/default/objects/Campaign_Funnel_Snapshot__c/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <description>Name of the campaign this snapshot row belongs to. Populated from the source report grouping; supports multi-campaign trend reporting.</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>