force-app/main/default/objects/Campaign_Funnel_Snapshot__c/fields/Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Member_Count__c</fullName>
    <description>Number of campaign members in this status at snapshot time.</description>
    <label>Member Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>