force-app/main/default/objects/Campaign_Funnel_Snapshot__c/fields/Member_Status__c.field-meta.xml
<CustomField>
    <fullName>Member_Status__c</fullName>
    <description>Campaign member status at snapshot time (e.g. Day 1 Sent, Day 3 Sent, Replied, Meeting Booked, Unsubscribed).</description>
    <label>Member Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>