force-app/main/default/objects/Campaign_Funnel_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <description>Date the snapshot row was captured. Defaults to TODAY() at insert so trend reports can group by day without an explicit mapping.</description>
    <defaultValue>TODAY()</defaultValue>
    <label>Snapshot Date</label>
    <type>Date</type>
</CustomField>